--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <name>Spring 2 MVC</name>
     <properties>
         <org.springframework.version>4.0.2.RELEASE</org.springframework.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.6</jdk.version>
         <spring.version>2.5.6</spring.version>
         <jstl.version>1.2</jstl.version>
